# oci-ag

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE.txt  README.md  THIRD_PARTY_LICENSES.txt  config.ini  constraints.txt  installer.py  integration_tests.py  ocibuild.conf  pyproject.toml  pytest.ini  release-notes-1.1.md  tox.ini
docs/: snapshot-complete-stale-row-cleanup-design.md
scripts/: build_image.sh  migrate_adw_connection_secret.py
src/common/logger/: logger.py
src/common/ocihelpers/: adw.py  artifact.py  connector.py  event.py  function.py  iam.py  logging.py  storage.py  stream.py  vault.py  vcn.py
src/dfa/adw/: connection.py  user_schema.py
src/dfa/adw/query_builders/: access_bundle.py  access_guardrail.py  approval_workflow.py  audit_events.py  base_query_builder.py  cloud_group.py  cloud_policy.py  global_identity_collection.py  identity.py  orchestrated_system.py  ownership_collection.py  permission.py  permission_assignment.py  policy.py  policy_statement_resource_mapping.py  resource.py  role.py
src/dfa/adw/tables/: access_bundle.py  access_guardrail.py  approval_workflow.py  audit_events.py  base_table.py  cloud_group.py  cloud_policy.py  global_identity_collection.py  identity.py  orchestrated_system.py  ownership_collection.py  permission.py  permission_assignment.py  policy.py  policy_statement_resource_mapping.py  resource.py  role.py
src/dfa/bootstrap/: envvars.py  image_version.py
src/dfa/etl/: __init__.py  abstract_transformer.py  audit_transformer.py  file_transformer.py  stream_transformer.py
src/dfa/etl/transformers/: access_bundle.py  access_guardrail.py  approval_workflow.py  audit_events.py  base_event_transformer.py  cloud_group.py  cloud_policy.py  global_identity_collection.py  identity.py  orchestrated_system.py  ownership_collection.py  permission.py  permission_assignment.py  policy.py  policy_statement_resource_mapping.py  policy_utils.py  resource.py  role.py
src/handlers/: audit_handler.py  dispatcher.py  file_handler.py  file_to_timeseries_handler.py  stream_handler.py  stream_to_timeseries_handler.py
tests/: test_additional_coverage.py  test_handlers.py
tests/dfa/adw/: test_connection.py  test_update_many_query_builder.py
tests/dfa/etl/: test_abstract_transformer.py  test_audit_transformer.py  test_cloud_policy_scoring.py  test_empty_relationship_transformers.py  test_file_transformer.py  test_stream_transformer.py
(+28 files in other folders)
